configs/clusters/production/01-stage/argo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-server
  namespace: argo
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: https
spec:
  rules:
  - host: argo.local.d20.fan
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: argo-server
            port:
              number: 2746
